--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/per.png">
+            <img class="avatar" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flogos-download.com%2F5479-manchester-united-logo-download.html&psig=AOvVaw3Ar_QCw_nq4R1GumXSeV4I&ust=1692548334128000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCICSkoaQ6YADFQAAAAAdAAAAABAE">
             <div >
                 <h3>Per Harald Borgen</h3>
                 <p>Frontend Developer</p>
