--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="per.png">
+            <img class="avatar" src="per.png" alt="A picture of Per smiling with a colorful background">
             <div >
                 <h3>Per Harald Borgen</h3>
                 <p>Frontend Developer</p>
